--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 
 	<-- no support for IE8 and older -->
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Marvin Botens, Stephan Giesau">
-    <link rel="shortcut icon" href="favicon.png">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<meta name="author" content="Marvin Botens, Stephan Giesau">
+		<link rel="shortcut icon" href="favicon.png">
 
-    <title>TimeTraTo</title>
+		<title>TimeTraTo</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/jasny-bootstrap.min.css" rel="stylesheet">
+		<!-- Bootstrap core CSS -->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/jasny-bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles -->
-    <link href="css/custom.css" rel="stylesheet">
-  </head>
+		<!-- Custom styles -->
+		<link href="css/custom.css" rel="stylesheet">
+	</head>
 
   <body>
     <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
@@ -66,9 +66,7 @@
     </div><!-- /.container -->
     
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Bootstrap core JavaScript -->
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jasny-bootstrap.min.js"></script>
