--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/jasny-bootstrap.min.css" rel="stylesheet">
+        
+        <!-- webfonts -->
+        <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100" rel="stylesheet">
 
         <!-- Custom styles -->
         <link href="css/custom.css" rel="stylesheet">
