--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
         </div><!-- /.container -->
 
 
-        <!-- Bootstrap core JavaScript
+        <!-- Bootstrap + localStorageDB core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="js/jquery-2.1.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jasny-bootstrap.min.js"></script>
+        <script src="js/localstoragedb.min.js"></script>
     </body>
 </html>
