Updates on index.html template
Change-Id: Id6d9ac0c04222aa96dfc76f987e6ad4dd1d070ff
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Marvin Botens, Stephan Giesau">
         <link rel="shortcut icon" href="favicon.png">
 
-        <title>TimeTraTo</title>
+        <title>TimeTrackTool</title>
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,8 +24,8 @@
     </head>
 
     <body>
-        <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm">
-            <a class="navmenu-brand visible-md visible-lg" href="#">Project name</a>
+        <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm navmenu-inverse">
+            <a class="navmenu-brand visible-md visible-lg" href="#">TimeTrackTool</a>
             <ul class="nav navmenu-nav">
                 <li class="active"><a href="./">Slide in</a></li>
                 <li><a href="../navmenu-push/">Push</a></li>
