Updates on templates
Change-Id: Ie96c829edb46ea7958c870c7c1b781f3be12da91
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
         <!-- Bootstrap core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/jasny-bootstrap.min.css" rel="stylesheet">
         
         <!-- webfonts -->
         <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100" rel="stylesheet">
@@ -24,40 +23,8 @@
     </head>
 
     <body>
-        <div class="navmenu navmenu-default navmenu-fixed-left offcanvas-sm navmenu-inverse">
-            <a class="navmenu-brand visible-md visible-lg" href="#">TimeTrackTool</a>
-            <ul class="nav navmenu-nav">
-                <li class="active"><a href="./">Slide in</a></li>
-                <li><a href="../navmenu-push/">Push</a></li>
-                <li><a href="../navmenu-reveal/">Reveal</a></li>
-                <li><a href="../navbar-offcanvas/">Off canvas navbar</a></li>
-            </ul>
-            <ul class="nav navmenu-nav">
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                    <ul class="dropdown-menu navmenu-nav">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-
-        <div class="navbar navbar-default navbar-fixed-top hidden-md hidden-lg">
-            <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
+        <div class="navbar navbar-default navbar-fixed-top navbar-inverse">
+            <a class="navbar-brand" href="#">TimeTrackTool</a>
         </div>
 
         <div class="container">
@@ -69,12 +36,9 @@
         </div><!-- /.container -->
 
 
-        <!-- Bootstrap + localStorageDB core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- JavaScript Libraries -->
         <script src="js/jquery-2.1.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/jasny-bootstrap.min.js"></script>
         <script src="js/localstoragedb.min.js"></script>
     </body>
 </html>
