--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
         <script src="js/jquery-2.1.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/localstoragedb.min.js"></script>
+        <!-- Custom JS logic -->
+        <script src="js/custom.js"></script>
     </body>
 </html>
