added column layout

--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
             <a class="navbar-brand" href="#">TimeTrackTool</a>
         </div>
 
-        <div class="container">
+        <div class="container-fluid">
             <div class="page-header">
                 <h1>Navmenu Template</h1>
             </div>
-            <p class="lead">This example shows the navmenu element. If the viewport is <b>less than 992px</b> the menu will be placed the off canvas and will be shown with a slide in effect.</p>
-            <p>Also take a look at the examples for a navmenu with <a href="../navmenu-push">push effect</a> and <a href="../navmenu-reveal">reveal effect</a>.</p>
+            <div class="row">
+                <div class="col-xs-6 col-md-4">Col1</div>
+                <div class="col-xs-6 col-md-4">Col2</div>
+                <div class="col-xs-6 col-md-4">Col3</div>
+            </div>
+            
         </div><!-- /.container -->
 
 
