--- a/index.html
+++ b/index.html
@@ -25,14 +25,21 @@
     <body>
         <div class="navbar navbar-default navbar-fixed-top navbar-inverse">
             <a class="navbar-brand" href="#">TimeTrackTool</a>
+            
+            <div class="navbar-form navbar-right">
+				<button type="button" class="btn btn-danger btn-default" onclick="db.drop();">
+					<span class="glyphicon glyphicon-remove-sign"></span> Delete database
+				</button>
+			</div>
         </div>
 
         <div class="container-fluid">
-            <div class="page-header">
-                <h1>Navmenu Template</h1>
-            </div>
             <div class="row">
-                <div class="col-xs-12 col-md-3">Col1</div>
+                <div class="col-xs-12 col-md-3 well">
+
+		             <h3></h3>
+
+                </div>
                 <div class="col-xs-12 col-md-4">Col2</div>
                 <div class="col-xs-12 col-md-5">Col3</div>
             </div>
