Layout weekly overview
Change-Id: I85da669d02420ae5d669fba3394a6d7f824d6e71
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -43,6 +43,33 @@
             <div class="row">
                 <div class="col-xs-12 col-md-5">
                 	<h2>Week overview</h2>
+                	
+                	<table class="table table-bordered table-condensed" id="overview-week">
+	                	<thead>
+	                		<tr>
+	                			<th></th>
+	                			<th>Monday</th>
+	                			<th>Tuesday</th>
+	                			<th>Wednesday</th>
+	                			<th>Thursday</th>
+	                			<th>Friday</th>
+	                			<th>Saturday</th>
+	                			<th>Sunday</th>
+	                		</tr>
+	                	</thead>
+	                	<tbody>
+	                		<tr>
+	                			<td class="text-right">0<br><br>4<br><br>8<br><br>12<br><br>16<br><br>20<br><br>24</td>
+	                			<td><div class="working-period" style="top:20%;height:23%;"></div><div class="working-period" style="top:58%;height:12.6%;"></div></td>
+	                			<td><div class="working-period" style="top:20%;height:23%;"></div><div class="working-period" style="top:58%;height:12.6%;"></div></td>
+	                			<td><div class="working-period" style="top:14%;height:50%;"></div></td>
+	                			<td><div class="working-period" style="top:10%;height:30%;"></div><div class="working-period" style="top:48%;height:12.6%;"></div></td>
+	                			<td><div class="working-period" style="top:20%;height:23%;"></div><div class="working-period" style="top:58%;height:12.6%;"></div></td>
+	                			<td></td>
+	                			<td></td>
+	                		</tr>
+	                	</tbody>
+                	</table>
                 </div>
                 <div class="col-xs-12 col-md-4">
                 	<h2>Day overview</h2>
