Adjustments on week table layout
Change-Id: I0ca2b2b443f93d3001cbfccae43ae6b23f551a05
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 	<table class="table table-bordered table-condensed" id="overview-week">
 	                	<thead>
 	                		<tr>
-	                			<th></th>
-	                			<th>Monday</th>
-	                			<th>Tuesday</th>
-	                			<th>Wednesday</th>
-	                			<th>Thursday</th>
-	                			<th>Friday</th>
-	                			<th>Saturday</th>
-	                			<th>Sunday</th>
+	                			<th width="5%"></th>
+	                			<th width="15%" class="text-center">Monday</th>
+	                			<th width="15%" class="text-center">Tuesday</th>
+	                			<th width="15%" class="text-center">Wednesday</th>
+	                			<th width="15%" class="text-center">Thursday</th>
+	                			<th width="15%" class="text-center">Friday</th>
+	                			<th width="10%" class="text-center"><small>Saturday</small></th>
+	                			<th width="10%" class="text-center"><small>Sunday</small></th>
 	                		</tr>
 	                	</thead>
 	                	<tbody>
