Add refreshInternshipOverview function
Change-Id: I52dacf428b8b1a3964b83c8d8b3599a1dbafd203
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 col-md-6">
-                	<h2>Week overview <small>22.09. - 26.09.2014</small></h2>
+                	<h2>Week overview <small><a id="overview-week-button-prev" href="#"><span class="glyphicon glyphicon-chevron-left"></span></a> &nbsp;&nbsp; <span id="overview-week-timerange">22.09. - 26.09.2014</span> &nbsp;&nbsp; <a id="overview-week-button-next" href="#"><span class="glyphicon glyphicon-chevron-right"></span></a></small></h2>
                 	
                 	<table class="table table-bordered table-condensed" id="overview-week">
 	                	<thead>
@@ -140,7 +140,7 @@
                 	</table>
                 </div>
                 <div class="col-xs-12 col-md-3">
-                	<h2>Day overview <small>24.09.2014</small></h2>
+                	<h2>Day overview <small id="overview-day-date">24.09.2014</small></h2>
                 </div>
                 <div class="col-xs-12 col-md-3">
 	                <div class="well">
