Added functions for application startup
Change-Id: I83db73a6f9b061b8c5d06934460404b55768f208
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 	</table>
                 </div>
                 <div class="col-xs-12 col-md-3">
-                	<h2>Day overview <small id="overview-day-date">24.09.2014</small></h2>
+                	<h2>Day overview <small id="overview-day-date">-</small></h2>
                 </div>
                 <div class="col-xs-12 col-md-3">
 	                <div class="well">
