Fill edit internship form based on current internship ID
Change-Id: I4e1e207bde0b251d95d28a11bcd8dff17e6838d5
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -223,14 +223,14 @@
 							<div class="form-group">
 								<label for="form-internship-start">Start date</label>
 		    					<div class="input-group">
-									<input type="text" id="form-internship-start" class="form-control" data-date="2014-02-12" data-date-format="yyyy-mm-dd" value="2014-02-12" placeholder="YYYY-MM-DD">
+									<input type="text" id="form-internship-start" class="form-control" data-date="" data-date-format="dd.mm.yyyy" value="" placeholder="DD.MM.YYYY">
 									<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 								</div>
 							</div>
 							<div class="form-group">
 							<label for="form-internship-end">End date</label>
 								<div class="input-group">
-									<input type="text" id="form-internship-end" class="form-control" data-date="2014-02-12" data-date-format="yyyy-mm-dd" value="2014-02-12" placeholder="YYYY-MM-DD">
+									<input type="text" id="form-internship-end" class="form-control" data-date="" data-date-format="dd.mm.yyyy" value="" placeholder="DD.MM.YYYY">
 									<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 								</div>
 							</div>
