Separate JS files to backend and frontend
Change-Id: I16a1fd0108d2b9b7c4ba02b1e4a2077efb1f887b
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
         <script src="js/jquery.runner-min.js"></script>
         <script src="js/md5.js"></script>
         <!-- Custom JS logic -->
-        <script src="js/custom.js"></script>
+        <script src="js/backend.js"></script>
+        <script src="js/frontend.js"></script>
     </body>
 </html>
