--- a/index.html
+++ b/index.html
@@ -213,11 +213,14 @@
 		      	<form role="form">
 			      	<div class="row">
 			      		<div class="col-xs-12 col-md-6">
-				        	
 							<div class="form-group">
 								<label for="form-internship-name">Internship title</label>
 								<input type="text" class="form-control" id="form-internship-name" placeholder="e.g. PE5 - Hamburg">
-							</div>					
+							</div>
+							<div class="form-group">
+								<label for="form-internship-id">Internship ID</label>
+								<input type="text" class="form-control" id="form-internship-id" disabled>
+							</div>
 						</div>
 						<div class="col-xs-12 col-md-5">
 							<div class="form-group">
@@ -240,7 +243,7 @@
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-default" data-dismiss="modal" id="form-internship-cancel">Cancel &amp; close</button>
-		        <button type="button" class="btn btn-primary" id="form-internship-save">Save changes</button>
+		        <button type="button" class="btn btn-primary" id="form-internship-save">Save</button>
 		      </div>
 		    </div>
 		  </div>
