Add functionality for deleting internships
Change-Id: Id9dd01451ec9acc3be260d457e050c0b1ecf31af
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -290,8 +290,14 @@
 				</form>
 		      </div>
 		      <div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal" id="form-internship-cancel">Cancel &amp; close</button>
-		        <button type="button" class="btn btn-primary" id="form-internship-save">Save</button>
+		      	<div class="row">
+		      		<div class="col-xs-12 col-md-6 text-left">
+		        		<button type="button" class="btn btn-danger" data-dismiss="modal" id="form-internship-delete">Delete</button>
+		        	</div>
+		        	<div class="col-xs-12 col-md-6 text-right">
+		        		<button type="button" class="btn btn-default" data-dismiss="modal" id="form-internship-cancel">Cancel &amp; close</button>
+		        		<button type="button" class="btn btn-primary" id="form-internship-save">Save</button>
+		        	</div>
 		      </div>
 		    </div>
 		  </div>
