Several changes on frontend
Change-Id: I7313a011bd93db8b5748730b1db5834769195d08
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body>
         <div class="navbar navbar-default navbar-fixed-top navbar-inverse">
-            <span class="navbar-brand" href="#"><span class="glyphicon glyphicon-time"></span> TimeTrackTool</span>
+            <span class="navbar-brand"><span class="glyphicon glyphicon-time"></span> TimeTrackTool</span>
             <button type="button" class="btn navbar-btn btn-danger" onclick="db.drop();">
 				<span class="glyphicon glyphicon-remove-sign"></span> <strong>Delete database</strong>
 			</button>
@@ -298,6 +298,7 @@
 		        		<button type="button" class="btn btn-default" data-dismiss="modal" id="form-internship-cancel">Cancel &amp; close</button>
 		        		<button type="button" class="btn btn-primary" id="form-internship-save">Save</button>
 		        	</div>
+		        </div>
 		      </div>
 		    </div>
 		  </div>
