--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
         <script src="js/md5.js"></script>
         <!-- Custom JS logic -->
         <script src="js/backend.js"></script>
+        <script src="js/statistics.js"></script>
         <script src="js/frontend.js"></script>
     </body>
 </html>
