Week overview shows data only for days in time range; select dropdown disabled for days outside the time range
Change-Id: I742cb167c53442cbda5b1ebedd1b46f9ed8cb53f
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	                			<td>
 	                				<small>
 	                				<select class="overview-week-0">
-	                					<option value="Working day">Working day</option>
+	                					<option value="Working Day">Working Day</option>
 	                					<option value="Holiday">Holiday</option>
 	                					<option value="Vacation">Vacation</option>
 	                				</select>
@@ -70,7 +70,7 @@
 	                			<td>
 	                				<small>
 	                				<select class="overview-week-1">
-	                					<option value="Working day">Working day</option>
+	                					<option value="Working Day">Working Day</option>
 	                					<option value="Holiday">Holiday</option>
 	                					<option value="Vacation">Vacation</option>
 	                				</select>
@@ -79,7 +79,7 @@
 	                			<td>
 	                				<small>
 	                				<select class="overview-week-2">
-	                					<option value="Working day">Working day</option>
+	                					<option value="Working Day">Working Day</option>
 	                					<option value="Holiday">Holiday</option>
 	                					<option value="Vacation">Vacation</option>
 	                				</select>
@@ -88,7 +88,7 @@
 	                			<td>
 	                				<small>
 	                				<select class="overview-week-3">
-	                					<option value="Working day">Working day</option>
+	                					<option value="Working Day">Working Day</option>
 	                					<option value="Holiday">Holiday</option>
 	                					<option value="Vacation">Vacation</option>
 	                				</select>
@@ -97,7 +97,7 @@
 	                			<td>
 	                				<small>
 	                				<select class="overview-week-4">
-	                					<option value="Working day">Working day</option>
+	                					<option value="Working Day">Working Day</option>
 	                					<option value="Holiday">Holiday</option>
 	                					<option value="Vacation">Vacation</option>
 	                				</select>
@@ -107,7 +107,7 @@
 	                				<small>
 	                				<select class="overview-week-5">
 	                					<option value="Weekend">Weekend</option>
-	                					<option value="Working day">Working day</option>
+	                					<option value="Working Day">Working Day</option>
 	                					<option value="Holiday">Holiday</option>
 	                					<option value="Vacation">Vacation</option>
 	                				</select>
@@ -117,7 +117,7 @@
 	                				<small>
 	                				<select class="overview-week-6">
 	                					<option value="Weekend">Weekend</option>
-	                					<option value="Working day">Working day</option>
+	                					<option value="Working Day">Working Day</option>
 	                					<option value="Holiday">Holiday</option>
 	                					<option value="Vacation">Vacation</option>
 	                				</select>
