Fixed refreshes for views on internship create/update
Change-Id: I8ddf557618496cf3a4a59566fd5c6f0ed99de20c
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 	                	<tbody>
 	                		<tr>
 	                			<td class="text-right">0<br><br>4<br><br>8<br><br>12<br><br>16<br><br>20<br><br>24</td>
-	                			<td class="overview-week-0"><div class="working-period" style="top:20%;height:23%;"></div><div class="working-period" style="top:58%;height:12.6%;"></div></td>
-	                			<td class="overview-week-1"><div class="working-period" style="top:20%;height:23%;"></div><div class="working-period" style="top:58%;height:12.6%;"></div></td>
-	                			<td class="overview-week-2"><div class="working-period" style="top:14%;height:50%;"></div></td>
-	                			<td class="overview-week-3"><div class="working-period" style="top:10%;height:30%;"></div><div class="working-period" style="top:48%;height:12.6%;"></div></td>
-	                			<td class="overview-week-4"><div class="working-period" style="top:20%;height:23%;"></div><div class="working-period" style="top:58%;height:12.6%;"></div></td>
+	                			<td class="overview-week-0"></td>
+	                			<td class="overview-week-1"></td>
+	                			<td class="overview-week-2"></td>
+	                			<td class="overview-week-3"></td>
+	                			<td class="overview-week-4"></td>
 	                			<td class="overview-week-5"></td>
 	                			<td class="overview-week-6"></td>
 	                		</tr>
@@ -143,17 +143,17 @@
                 	<div class="row overview-week-stat">
                 		<div class="col-xs-6 col-md-4">
                 			<div class="well">
-                				<p>Total</p><h2 id="overview-week-stat-total">38.5</h2>
+                				<p>Total</p><h2 id="overview-week-stat-total">&mdash;</h2>
                 			</div>
                 		</div>
                 		<div class="col-xs-6 col-md-4">
                 			<div class="well">
-                				<p>Worked</p><h2 id="overview-week-stat-worked" class="text-success">32.74</h2>
+                				<p>Worked</p><h2 id="overview-week-stat-worked" class="text-success">&mdash;</h2>
                 			</div>
                 		</div>
                 		<div class="col-xs-6 col-md-4">
                 			<div class="well">
-                				<p>Due</p><h2 id="overview-week-stat-due" class="text-danger">5.21</h2>
+                				<p>Due</p><h2 id="overview-week-stat-due" class="text-danger">&mdash;</h2>
                 			</div>
                 		</div>
                 	</div>
