--- a/index.html
+++ b/index.html
@@ -160,13 +160,7 @@
                 </div>
                 <div class="col-xs-12 col-md-3">
                 	<h2>Day overview <small id="overview-day-date">&mdash;</small></h2>
-                	<table class="table" id="overview-day-periods">
-                		<tr>
-                			<td>8:34</td>
-                			<td>10:47</td>
-                			<td class="text-right"><a href="#" id="overview-day-edit"><span class="glyphicon glyphicon-pencil"></span></a></td>
-                		</tr>
-                	</table>
+                	<table class="table" id="overview-day-periods"></table>
                 </div>
                 <div class="col-xs-12 col-md-3">
 	                <div class="well">
