--- a/index.html
+++ b/index.html
@@ -269,50 +269,10 @@
 					<hr>
 					<button class="btn btn-default" id="form-internship-button-addvacation">Add vacation</button>
 					<button class="btn btn-default" id="form-internship-button-addholiday">Add holiday</button><br><br>
-
-					<div id="form-internship-dynblock" class="row">
-						<div class="col-xs-12 col-md-2">
-							<strong id="form-internship-dynblock-type">Vacation</strong>
-						</div>
-						<div class="col-xs-12 col-md-5">
-							<div class="form-group">
-								<label for="form-internship-dynblock-start">Start date</label>
-		    					<div class="input-group">
-									<input type="text" id="form-internship-dynblock-start" class="form-control" data-date="" data-date-format="dd.mm.yyyy" value="" placeholder="DD.MM.YYYY">
-									<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-12 col-md-5">
-							<div class="form-group">
-							<label for="form-internship-dynblock-end">End date</label>
-								<div class="input-group">
-									<input type="text" id="form-internship-dynblock-end" class="form-control" data-date="" data-date-format="dd.mm.yyyy" value="" placeholder="DD.MM.YYYY">
-									<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div id="form-internship-dynblock" class="row">
-						<div class="col-xs-12 col-md-2">
-							<strong id="form-internship-dynblock-type">Holiday</strong>
-						</div>
-						<div class="col-xs-12 col-md-5">
-							<div class="form-group">
-								<label for="form-internship-dynblock-start">Start date</label>
-		    					<div class="input-group">
-									<input type="text" id="form-internship-dynblock-start" class="form-control" data-date="" data-date-format="dd.mm.yyyy" value="" placeholder="DD.MM.YYYY">
-									<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-12 col-md-5">
-							<div class="form-group">
-								<label for="form-internship-dynblock-info">Description</label>
-								<input type="text" id="form-internship-dynblock-info" class="form-control" placeholder="e.g. Christmas">
-							</div>
-						</div>
-					</div>
+                                        
+                                        <div id="dynblock-wrapper">
+                                        </div>
+                                        
 				</form>
 		      </div>
 		      <div class="modal-footer">
