added eventhandler for add vacation and add holiday button in internship form

--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
 					</div>
 					
 					<hr>
-					<button class="btn btn-default" id="form-internship-button-addvacation">Add vacation</button>
-					<button class="btn btn-default" id="form-internship-button-addholiday">Add holiday</button><br><br>
+					<button class="btn btn-default btn-add-dynblock" data-type="Vacation" id="form-internship-button-addvacation">Add vacation</button>
+					<button class="btn btn-default btn-add-dynblock" data-type="Holiday" id="form-internship-button-addholiday">Add holiday</button><br><br>
                                         
                                         <div id="dynblock-wrapper">
                                         </div>
