--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	                	</thead>
 	                	<tbody>
 	                		<tr>
-	                			<td class="text-right">0<br><br>4<br><br>8<br><br>12<br><br>16<br><br>20<br><br>24</td>
+	                			<td class="text-right">0:00<br><br>4:00<br><br>8:00<br><br>12:00<br><br>16:00<br><br>20:00<br><br>24:00</td>
 	                			<td class="overview-week-0"></td>
 	                			<td class="overview-week-1"></td>
 	                			<td class="overview-week-2"></td>
@@ -178,7 +178,7 @@
 		                <div class="col-xs-6 col-md-6">
 			                <div class="well">
 	
-								<h3><span id="overview-internship-name">Internship</span> <button class="btn btn-xs btn-default" id="change-internship-button">change</button></h3>
+								<h3><span id="overview-internship-name">Internship</span> <button class="btn btn-xs btn-default" id="change-internship-button">switch</button></h3>
 								
 								<hr>
 								
