--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
                 	<div class="row">
 		                <div class="col-xs-6 col-md-6">
 		                	<h2>Day overview <small id="overview-day-date">&mdash;</small></h2>
+		                	<p class="form-inline"><strong>Info:</strong>&nbsp; <input class="form-control" id="overview-day-info" value="Test" disabled></p>
 		                	<table class="table" id="overview-day-periods"></table>
+		                	<button class="btn btn-default">Add working period</button>
 		                </div>
 		                <div class="col-xs-6 col-md-6">
 			                <div class="well">
@@ -362,7 +364,7 @@
 		      	<h4>Delete / reset database</h4>
 		      	<p>You can delete all data tracked and reset the database. Caution! You are not asked to confirm the deletion when clicking the button.</p>
 				<button type="button" class="btn navbar-btn btn-danger" onclick="db.drop();">
-					<span class="glyphicon glyphicon-remove-sign"></span> <strong>Delete database</strong>
+					<span class="glyphicon glyphicon-remove"></span> <strong>Delete database</strong>
 				</button>
 		      </div>
 		      <div class="modal-footer">
