Functionality to add new working periods to a  displayed day
Change-Id: Ia9e533d01735cc2ad827beea977173ca54ec99ee
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		                	<h2>Day overview <small id="overview-day-date">&mdash;</small></h2>
 		                	<p class="form-inline"><strong>Info:</strong>&nbsp; <input class="form-control" id="overview-day-info" value="Test" disabled></p>
 		                	<table class="table" id="overview-day-periods"></table>
-		                	<button class="btn btn-default">Add working period</button>
+		                	<button class="btn btn-default" id="overview-day-button-addperiod">Add working period</button>
 		                </div>
 		                <div class="col-xs-6 col-md-6">
 			                <div class="well">
