--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 					<button class="btn btn-default btn-add-dynblock" data-type="Vacation" id="form-internship-button-addvacation">Add vacation</button>
 					<button class="btn btn-default btn-add-dynblock" data-type="Holiday" id="form-internship-button-addholiday">Add holiday</button><br><br>
                                         
-                                        <div id="dynblock-wrapper">
+                                        <div id="dynblock-wrapper" data-counter="0">
                                         </div>
                                         
 				</form>
