Add edit controls for day info
Change-Id: I1d379a66296706b0356288d31307e155e0c7c374
Signed-off-by: Stephan <stegiemail-github@yahoo.de>

--- a/index.html
+++ b/index.html
@@ -173,7 +173,17 @@
                 	<div class="row">
 		                <div class="col-xs-6 col-md-6">
 		                	<h2>Day overview <small id="overview-day-date">&mdash;</small></h2>
-		                	<p class="form-inline"><strong>Info:</strong>&nbsp; <input class="form-control" id="overview-day-info" value="Test" disabled></p>
+		                	
+		                	<div class="row">
+		                		<div class="col-xs-6 col-md-6">
+		                			<p class="form-inline"><strong>Info:</strong>&nbsp; <input class="form-control" id="overview-day-info" disabled></p>
+		                		</div>
+		                		<div class="col-xs-6 col-md-6 text-right">
+		                			<a href="#" id="overview-day-info-edit"><span class="glyphicon glyphicon-pencil"></span></a>
+		                			<a href="#" id="overview-day-info-save" class="text-success" style="display:none"><span class="glyphicon glyphicon-ok"></span></a>
+		                		</div>
+		                	</div>
+		                	
 		                	<table class="table" id="overview-day-periods"></table>
 		                	<button class="btn btn-default" id="overview-day-button-addperiod">Add working period</button>
 		                </div>
