--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
 		                <div class="col-xs-6 col-md-6">
 		                	<h2>Day overview <small id="overview-day-date">&mdash;</small></h2>
 		                	
-		                	<div class="row">
-		                		<div class="col-xs-6 col-md-6">
+		                	<div class="row overview-day-wrapper">
+		                		<div class="col-xs-10 col-md-10">
 		                			<p class="form-inline"><strong>Info:</strong>&nbsp; <input class="form-control" id="overview-day-info" disabled></p>
 		                		</div>
-		                		<div class="col-xs-6 col-md-6 text-right">
+		                		<div class="col-xs-2 col-md-2 text-right">
 		                			<a href="#" id="overview-day-info-edit"><span class="glyphicon glyphicon-pencil"></span></a>
 		                			<a href="#" id="overview-day-info-save" class="text-success" style="display:none"><span class="glyphicon glyphicon-ok"></span></a>
 		                		</div>
