--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                                         
                                         <hr>
                                         <h4>Statistics</h4>
+                                        <h5>Selected Day</h5>
                                         <dl class="dl-horizontal">
                                                 <dt>Total</dt>
                                                 <dd id="overview-day-stat-total"></dd>
@@ -219,6 +220,7 @@
 								
 								<hr>
 								<h4>Statistics</h4>
+                                                                <h5>Internship Start - Today</h5>
 								<dl class="dl-horizontal">
 									<dt>Total</dt>
 									<dd id="overview-internship-stat-total"></dd>
