--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 			<div class="collapse navbar-collapse" id="nav-content">
 				<ul class="nav navbar-nav">
+					<li><a href="javascript:startTour();">Start the tour</a></li>
 					<li><a href="#" data-toggle="modal" data-target="#form-settings"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
 				</ul>
 	            
