--- a/mail/ttt_mail.html
+++ b/mail/ttt_mail.html
@@ -14,6 +14,7 @@
     .ttt-wrapper {
         max-width: 780px;
         padding: 10px;
+		margin: 0 auto;
     }
     
     .ttt-logo,
@@ -101,6 +102,12 @@
     .ttt-button:hover {
         background-color: #001934;
     }
+	
+	.ttt-preheader {
+		width: 100%;
+		text-align: center;
+		display: none;
+	}
     
     .ttt-footer {
         border-top: 1px solid #aaa;
@@ -115,6 +122,7 @@
 <body>
 
 <div class="ttt-wrapper">
+	<div class="ttt-preheader"><a href="http://mb4.github.io/PE-Zeiterfassungstool/mail/ttt_mail.html">hier klicken</a> falls diese Mail nicht richtig angezeigt wird!</div>
     <img class="ttt-logo" src="ttt_logo_full_bright.png" width="302" height="45">
     <img class="ttt-screen" src="ttt_screen.jpg">
     <h1>
