* added autors' names to footer

--- a/mail/ttt_mail.html
+++ b/mail/ttt_mail.html
@@ -86,6 +86,14 @@
         display: block;
         margin: 1em auto;
     }
+	
+	.ttt-fright {
+		float: right;
+	}
+	
+	.ttt-fleft {
+		float: left;
+	}
 
     
     .ttt-button {
@@ -154,7 +162,7 @@
     <a href="http://mb4.github.io/PE-Zeiterfassungstool" class="ttt-button">TimeTrackTool öffnen</a>
     </h2>
     
-    <p class="ttt-footer">Projekt öffentlich verfügbar auf <a href="http://github.com/mb4/PE-Zeiterfassungstool">Github</a> </p>
+    <p class="ttt-footer"><span class="ttt-fleft">Projekt öffentlich verfügbar auf <a href="http://github.com/mb4/PE-Zeiterfassungstool">Github</a></span><span class="ttt-fright">Autoren: Stephan & Marvin</span></p>
 </div>
 
 
